--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laskuppen",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Create-react-app with Express",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
-
+  "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
