--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "cross-fetch": "^3.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "pg": "^8.5.1"
   },
   "engines": {
     "node": "15.12.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/KarlssonLucas/dat257-laskuppen.git"
