--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
-    "react-rewards": "^1.1.2",
-    "react-router-dom": "^5.2.0"
+    "react-rewards": "^1.1.2"
   },
   "engines": {
-    "node": "^15.12.0"
+    "node": "^15.14.0"
   },
   "repository": {
     "type": "git",
