--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "laskuppen",
   "version": "1.0.0",
   "private": true,
+  "proxy":"http://localhost:5000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
