--- a/client/package.json
+++ b/client/package.json
@@ -2,16 +2,19 @@
   "name": "laskuppen",
   "version": "1.0.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@popperjs/core": "^2.9.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.1.1",
     "pg": "^8.5.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
