--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
+    "popper.js": "^1.16.1",
     "react-rewards": "^1.1.2"
   },
   "engines": {
