--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "popper.js": "^1.16.1",
-    "react-rewards": "^1.1.2"
+    "react-rewards": "^1.1.2",
+    "react-select": "^4.3.0"
   },
   "engines": {
     "node": "^15.14.0"
