--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg": "^8.5.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-rewards": "^1.1.2",
     "react-select": "^4.3.0"
   },
