--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pose": "^4.0.10",
     "react-rewards": "^1.1.2",
     "react-select": "^4.3.0"
   },
